syntax = "proto3";

package user; 

service UserService {
  
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  
  
}



message GetUsersRequest {
 
 
}


message GetUsersResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
    repeated User data = 5;
  
}

message GetUserRequest {
  
  string id = 1;
  
 
}

message GetUserResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  User data = 5;
  
}


message User{
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  optional string createdAt = 5;
  optional string updatedAt = 6;

}

message CreateUserRequest {
  
 string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
 
}

message CreateUserResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  User data = 5;
  
}






